--- a/src/main/resources/com/example/autoluxe/vista_tareas.fxml
+++ b/src/main/resources/com/example/autoluxe/vista_tareas.fxml
@@ -182,11 +182,6 @@
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <Label layoutX="460.0" layoutY="177.0" text="Teléfono:">
-                                 <font>
-                                    <Font name="Microsoft Sans Serif" size="14.0" />
-                                 </font>
-                              </Label>
                               <Line endX="499.0" layoutX="237.0" layoutY="161.0" startX="-100.0" />
                               <Button fx:id="btnAnadirEmpleado" layoutX="249.0" layoutY="126.0" mnemonicParsing="false" onAction="#abrirAñadirTarea" prefHeight="36.0" prefWidth="174.0" stylesheets="@../../../style/estilo_app.css" text="AÑADIR TAREA">
                                  <graphic>
@@ -212,30 +207,33 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <TextField layoutX="457.0" layoutY="203.0" prefHeight="30.0" prefWidth="280.0" />
-                              <TableView layoutX="921.0" layoutY="243.0" prefHeight="215.0" prefWidth="662.0">
+                              <TableView fx:id="tablaTareas" layoutX="921.0" layoutY="243.0" prefHeight="215.0" prefWidth="662.0">
                                  <columns>
-                                    <TableColumn prefWidth="214.0" text="A" />
-                                    <TableColumn minWidth="0.0" prefWidth="236.0" text="B" />
-                                    <TableColumn prefWidth="210.0" text="C" />
+                                    <TableColumn fx:id="colIDTarea" prefWidth="140.0" text="ID Tarea" />
+                                    <TableColumn fx:id="colIDEmpleado" minWidth="0.0" prefWidth="140.0" text="ID Empleado" />
+                                    <TableColumn fx:id="colAsunto" prefWidth="140.0" text="Asunto" />
+                                    <TableColumn fx:id="colDescripcion" prefWidth="240.66650390625" text="Descripción" />
                                  </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
                               </TableView>
-                              <TextField layoutX="137.0" layoutY="287.0" prefHeight="30.0" prefWidth="600.0" />
-                              <TextField layoutX="136.0" layoutY="203.0" prefHeight="30.0" prefWidth="280.0" />
+                              <TextField fx:id="tfAsunto" disable="true" layoutX="137.0" layoutY="287.0" prefHeight="30.0" prefWidth="600.0" />
+                              <TextField fx:id="tfIDEmpleado" layoutX="136.0" layoutY="203.0" prefHeight="30.0" prefWidth="200.0" />
                               <Label alignment="CENTER" layoutX="260.0" layoutY="54.0" prefHeight="72.0" prefWidth="354.0" text="AÑADIR TAREA" textAlignment="CENTER">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="48.0" />
                                  </font>
                               </Label>
-                              <TextArea layoutX="136.0" layoutY="373.0" prefHeight="200.0" prefWidth="600.0" />
-                              <Button fx:id="acAnadir" layoutX="137.0" layoutY="625.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="600.0" text="AÑADIR">
+                              <TextArea fx:id="tfDescripcion" disable="true" layoutX="136.0" layoutY="373.0" prefHeight="200.0" prefWidth="600.0" />
+                              <Button fx:id="acAnadir" disable="true" layoutX="137.0" layoutY="625.0" mnemonicParsing="false" onAction="#introducirTareaBD" prefHeight="44.0" prefWidth="600.0" text="AÑADIR">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
                               </Button>
-                              <ChoiceBox layoutX="1404.0" layoutY="197.0" prefHeight="30.0" prefWidth="179.0" />
-                              <TextField layoutX="921.0" layoutY="197.0" prefHeight="31.0" prefWidth="285.0" />
-                              <Button fx:id="btnBuscar" layoutX="1206.0" layoutY="197.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
+                              <ChoiceBox fx:id="cbOpcion" layoutX="1404.0" layoutY="197.0" prefHeight="30.0" prefWidth="179.0" />
+                              <TextField fx:id="tfBuscar" layoutX="921.0" layoutY="197.0" prefHeight="31.0" prefWidth="285.0" />
+                              <Button fx:id="btnBuscar" layoutX="1206.0" layoutY="197.0" mnemonicParsing="false" onAction="#buscarDatosTablaTareas" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
@@ -247,25 +245,53 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Label alignment="CENTER" layoutX="1175.0" layoutY="103.0" prefHeight="47.0" prefWidth="155.0" text="TAREAS" textAlignment="CENTER">
+                              <Label alignment="CENTER" layoutX="922.0" layoutY="103.0" prefHeight="47.0" prefWidth="155.0" text="TAREAS" textAlignment="CENTER">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                  </font>
                               </Label>
                               <Line endX="559.0" layoutX="1022.0" layoutY="159.0" startX="-100.0" />
-                              <Label alignment="CENTER" layoutX="1150.0" layoutY="473.0" prefHeight="47.0" prefWidth="204.0" text="TAREA AÑADIDA" textAlignment="CENTER">
+                              <Label alignment="CENTER" layoutX="922.0" layoutY="473.0" prefHeight="47.0" prefWidth="204.0" text="TAREA AÑADIDA" textAlignment="CENTER">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                  </font>
                               </Label>
                               <Line endX="559.0" layoutX="1022.0" layoutY="529.0" startX="-100.0" />
-                              <TableView layoutX="921.0" layoutY="554.0" prefHeight="115.0" prefWidth="662.0">
+                              <TableView fx:id="tablaTarea" layoutX="921.0" layoutY="554.0" prefHeight="115.0" prefWidth="662.0">
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
                                  <columns>
-                                    <TableColumn prefWidth="214.0" text="A" />
-                                    <TableColumn minWidth="0.0" prefWidth="236.0" text="B" />
-                                    <TableColumn prefWidth="210.0" text="C" />
+                                    <TableColumn fx:id="colIDTarea1" prefWidth="140.0" text="ID Tarea" />
+                                    <TableColumn fx:id="colIDEmpleado1" minWidth="0.0" prefWidth="140.0" text="ID Empleado" />
+                                    <TableColumn fx:id="colAsunto1" prefWidth="140.0" text="Asunto" />
+                                    <TableColumn fx:id="colDescripcion1" prefWidth="240.66650390625" text="Descripción" />
                                  </columns>
                               </TableView>
+                              <Button fx:id="btnBuscar1" layoutX="336.0" layoutY="202.0" mnemonicParsing="false" onAction="#buscarEmpleado" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: #000000;">
+                                 <font>
+                                    <Font name="Microsoft Sans Serif" size="14.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../imagenes/lupa.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button layoutX="1331.0" layoutY="194.0" mnemonicParsing="false" onAction="#actualizarTablas" prefHeight="17.0" prefWidth="47.0" style="-fx-background-color: transparent;">
+                                 <font>
+                                    <Font name="Microsoft Sans Serif" size="14.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fx:id="btnActualizar" fitHeight="27.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../imagenes/actualizar.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
                            </children>
                         </Pane>
                         <Pane fx:id="panelCuerpo1" prefHeight="880.0" prefWidth="1620.0" stylesheets="@../../../style/estilo_app.css" visible="false">
@@ -286,11 +312,6 @@
                                  </font>
                               </Label>
                               <Label layoutX="139.0" layoutY="366.0" text="Descripción:">
-                                 <font>
-                                    <Font name="Microsoft Sans Serif" size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="460.0" layoutY="243.0" text="Teléfono:">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
@@ -320,30 +341,33 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <TextField layoutX="457.0" layoutY="269.0" prefHeight="30.0" prefWidth="280.0" />
-                              <TableView layoutX="922.0" layoutY="227.0" prefHeight="455.0" prefWidth="662.0">
+                              <TableView fx:id="tablaTareas2" layoutX="922.0" layoutY="227.0" prefHeight="455.0" prefWidth="662.0">
                                  <columns>
-                                    <TableColumn prefWidth="214.0" text="A" />
-                                    <TableColumn minWidth="0.0" prefWidth="236.0" text="B" />
-                                    <TableColumn prefWidth="210.0" text="C" />
+                                    <TableColumn fx:id="colIDTarea2" prefWidth="140.0" text="ID Tarea" />
+                                    <TableColumn fx:id="colIDEmpleado2" minWidth="0.0" prefWidth="140.0" text="ID Empleado" />
+                                    <TableColumn fx:id="colAsunto2" prefWidth="140.0" text="Asunto" />
+                                    <TableColumn fx:id="colDescripcion2" prefWidth="240.66650390625" text="Descripción" />
                                  </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
                               </TableView>
-                              <TextField layoutX="137.0" layoutY="330.0" prefHeight="30.0" prefWidth="600.0" />
-                              <TextField layoutX="136.0" layoutY="269.0" prefHeight="30.0" prefWidth="280.0" />
+                              <TextField fx:id="tfAsunto2" disable="true" layoutX="137.0" layoutY="330.0" prefHeight="30.0" prefWidth="600.0" />
+                              <TextField fx:id="tfIDEmpleado2" disable="true" layoutX="136.0" layoutY="269.0" prefHeight="30.0" prefWidth="280.0" />
                               <Label alignment="CENTER" layoutX="260.0" layoutY="54.0" prefHeight="72.0" prefWidth="354.0" text="EDITAR TAREA" textAlignment="CENTER">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="48.0" />
                                  </font>
                               </Label>
-                              <TextArea layoutX="137.0" layoutY="396.0" prefHeight="200.0" prefWidth="600.0" />
-                              <Button fx:id="acBorrar" layoutX="137.0" layoutY="634.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="280.0" text="BORRAR">
+                              <TextArea fx:id="tfDescripcion2" disable="true" layoutX="137.0" layoutY="396.0" prefHeight="200.0" prefWidth="600.0" />
+                              <Button fx:id="acBorrar" disable="true" layoutX="137.0" layoutY="634.0" mnemonicParsing="false" onAction="#borrarTarea" prefHeight="44.0" prefWidth="280.0" text="BORRAR">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
                               </Button>
-                              <ChoiceBox layoutX="1405.0" layoutY="181.0" prefHeight="30.0" prefWidth="179.0" />
-                              <TextField layoutX="922.0" layoutY="181.0" prefHeight="31.0" prefWidth="285.0" />
-                              <Button fx:id="btnBuscar11" layoutX="1207.0" layoutY="181.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
+                              <ChoiceBox fx:id="cbOpcion2" layoutX="1405.0" layoutY="181.0" prefHeight="30.0" prefWidth="179.0" />
+                              <TextField fx:id="tfBuscar3" layoutX="922.0" layoutY="181.0" prefHeight="31.0" prefWidth="285.0" />
+                              <Button fx:id="btnBuscar11" layoutX="1207.0" layoutY="181.0" mnemonicParsing="false" onAction="#buscarDatosTablaTareas2" prefHeight="31.0" prefWidth="101.0" style="-fx-background-color: #000000;">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
@@ -355,7 +379,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="acEditar" layoutX="457.0" layoutY="634.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="280.0" text="EDITAR">
+                              <Button fx:id="acEditar" disable="true" layoutX="457.0" layoutY="634.0" mnemonicParsing="false" onAction="#actualizarTarea" prefHeight="44.0" prefWidth="280.0" text="EDITAR">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="14.0" />
                                  </font>
@@ -365,14 +389,14 @@
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="135.0" layoutY="198.0" prefHeight="30.0" prefWidth="200.0" />
+                              <TextField fx:id="tfBuscar2" layoutX="135.0" layoutY="198.0" prefHeight="30.0" prefWidth="200.0" />
                               <Label alignment="CENTER" layoutX="921.0" layoutY="104.0" prefHeight="47.0" prefWidth="103.0" text="TAREAS" textAlignment="CENTER">
                                  <font>
                                     <Font name="Microsoft New Tai Lue Bold" size="24.0" />
                                  </font>
                               </Label>
                               <Line endX="559.0" layoutX="1022.0" layoutY="160.0" startX="-100.0" />
-                              <Button fx:id="btnBuscar111" layoutX="335.0" layoutY="197.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: #000000;">
+                              <Button fx:id="btnBuscar111" layoutX="335.0" layoutY="197.0" mnemonicParsing="false" onAction="#buscarTarea" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: #000000;">
                                  <font>
                                     <Font name="Microsoft Sans Serif" size="14.0" />
                                  </font>
@@ -380,6 +404,18 @@
                                     <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@../../../imagenes/lupa.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button layoutX="1334.0" layoutY="178.0" mnemonicParsing="false" onAction="#actualizarTablas" prefHeight="17.0" prefWidth="47.0" style="-fx-background-color: transparent;">
+                                 <font>
+                                    <Font name="Microsoft Sans Serif" size="14.0" />
+                                 </font>
+                                 <graphic>
+                                    <ImageView fx:id="btnActualizar1" fitHeight="27.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../imagenes/actualizar.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
